tests/errors/maskl_negative.f90
program maskl_negative
   print*, maskl(-24)
end program
